--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
-title: __SITE_NAME__
-description: __DESCRIPTION__
-url: __URL__
-basedomain: __BASEDOMAIN__
+title: top designer dresses
+description: there are many charming formal and wedding dresses
+url: topdesigner.neoformal.com
+basedomain: neoformal.com
 
 
 #####################
